# Synthetic-Markets

./: CMakeLists.txt  README.md  main.cpp  random-walk.cpp
Mean-Reversion/: .gitignore  README.md  main.cpp  makefile  mean-reversion.cpp  mean-reversion.h
Random-Walk/: .gitignore  CMakeLists.txt  gmon.out  main.cpp  makefile  profile.txt  random-walk  random-walk.cpp  random-walk.h
Random-Walk/profiling/: gmon.out  profile.txt
Regime-Switching/: main.cpp  regime-switching.h  regime-swtiching.cpp
Trending/: main.cpp  trending.cpp  trending.h
Utils/: makefile  utils  utils.cpp  utils.h
Visuals/: visual.py
